--- a/route.html
+++ b/route.html
@@ -140,173 +140,13 @@
             </div>
         </div>
         <!-- PAGE BANNER END  -->
-        <!-- PAGE ROUTE  -->
-        <div class="route-url">
-            <div class="container">
-                <div class="row">
-                    <ul class="url-list">
-                        <li><a href="index.html" class="url-link">HOME </a></li>
-                        <li>
-                            <p> / OCASSIONS</p>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+
+        <!-- ROUTE INFO  -->
+        <div class="route-map">
+            <div class="map" id="routeMap"></div>
+
         </div>
-        <!-- PAGE ROUTE END -->
-
-        <!-- ABOUT US PAGE  -->
-        <div class="about-area cpt-5">
-            <div class="container">
-                <div class="about-content-area cpy-6">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="about-content-wrapper">
-                                <div class="about-content">
-                                    <h5 class="s-title">hsv auto’s vaassen</h5>
-                                    <h2>Lorem Ipsum is simply dummy text of the</h2>
-                                    <p>Binnen een half uur rijden vanaf Apeldoorn, Zwolle en Deventer vindt u ons midden in het pittoreske dorpje Oene. De koffie staat altijd klaar! En wilt u een vrijblijvend advies? Wij helpen u graag! </p>
-                                    <p>Wij bezorgen gratis binnen een straal van 30 km rondom Oene. Daarbuiten is bezorging mogelijk tegen betaling. Wij leveren uitsluitend tegen contante betaling bij aflevering (mobiel pinnen is ook mogelijk).</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="about-img">
-                                <img src="assets/img/banner/5.png" alt="">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-        <!-- ABOUT US PAGE END  -->
-        <!-- SIGNATURE AREA  -->
-        <div class="signature-area mt-0 cpy-8">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6 mb-4">
-                        <div class="signature- area-img">
-                            <img src="assets/img/banner/6.png" alt="">
-                        </div>
-                    </div>
-                    <div class="col-md-6 mb-4">
-                        <div class="signature-content">
-                            <div class="dealer-info bg-white">
-                                <div class="info-inner">
-                                    <p class="sm-title">
-                                        hsv auto’s
-                                    </p>
-                                    <h2 class="dealer-title">
-                                        uw occossiondealer uit vaassen
-                                    </h2>
-                                    <p>Lorem Ipsum is slechts een proeftekst uit het drukkerij- en zetterijwezen. Lorem Ipsum is de standaard proeftekst in deze bedrijfstak sinds de 16e eeuw, toen een onbekende drukker een zethaak met letters nam en ze door
-                                        elkaar husselde om een font-catalogus te maken. Het heeft niet alleen vijf eeuwen overleefd maar is ook, vrijwel onveranderd</p>
-
-                                    <div class="signature-area">
-                                        <img src="assets/img/banner/signature.png" alt="">
-                                        <p class="dealer-name">HSV Auto’s B.V.</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- SIGNATURE AREA END -->
-
-        <!-- =====================TEAM============ -->
-        <div class="team-section cpy-8">
-            <div class="container">
-                <div class="row">
-                    <div class="occastion-head">
-                        <div class="left-title">
-                            <h5>hsv auto’s vaassen</h5>
-                            <h2 class="occasion-title">ons team</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="team-content mt-4">
-                    <div class="row">
-                        <div class="col-md-3 mb-4">
-                            <div class="team-card">
-                                <img src="assets/img/team.png" alt="" class="member-img">
-                                <div class="team-info">
-                                    <a href="" class="name">MIchael jackson</a>
-                                    <p>CEO</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3 mb-4">
-                            <div class="team-card">
-                                <img src="assets/img/team.png" alt="" class="member-img">
-                                <div class="team-info">
-                                    <a href="" class="name">MIchael jackson</a>
-                                    <p>CEO</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3 mb-4">
-                            <div class="team-card">
-                                <img src="assets/img/team.png" alt="" class="member-img">
-                                <div class="team-info">
-                                    <a href="" class="name">MIchael jackson</a>
-                                    <p>CEO</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3 mb-4">
-                            <div class="team-card">
-                                <img src="assets/img/team.png" alt="" class="member-img">
-                                <div class="team-info">
-                                    <a href="" class="name">MIchael jackson</a>
-                                    <p>CEO</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3 mb-4">
-                            <div class="team-card">
-                                <img src="assets/img/team.png" alt="" class="member-img">
-                                <div class="team-info">
-                                    <a href="" class="name">MIchael jackson</a>
-                                    <p>CEO</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3 mb-4">
-                            <div class="team-card">
-                                <img src="assets/img/team.png" alt="" class="member-img">
-                                <div class="team-info">
-                                    <a href="" class="name">MIchael jackson</a>
-                                    <p>CEO</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3 mb-4">
-                            <div class="team-card">
-                                <img src="assets/img/team.png" alt="" class="member-img">
-                                <div class="team-info">
-                                    <a href="" class="name">MIchael jackson</a>
-                                    <p>CEO</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3 mb-4">
-                            <div class="team-card">
-                                <img src="assets/img/team.png" alt="" class="member-img">
-                                <div class="team-info">
-                                    <a href="" class="name">MIchael jackson</a>
-                                    <p>CEO</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- =====================TEAM END============ -->
-
+        <!-- ROUTE INFO END -->
         <!-- ==================SERVICE=================== -->
         <div class="service cpy-6">
             <!-- CONTAINER  -->
@@ -588,6 +428,37 @@
     <script src="assets/js/map.js"></script>
     <!-- =============custom js========= -->
     <script src="assets/js/app.js"></script>
+
+
+    <script>
+        mapboxgl.accessToken = 'pk.eyJ1IjoiYW1hbmRhbGFwYSIsImEiOiJjazY2cjdkcjAwNDY4M2VwODFyZnZpbDg5In0.yZurTAPPw4f1D-VkffaHpw';
+        var map = new mapboxgl.Map({
+            container: 'routeMap',
+            style: 'mapbox://styles/mapbox/light-v10',
+            center: [6.0498717, 52.3446363],
+            zoom: 15
+        });
+
+        // Create a default Marker and add it to the map.
+        var marker1 = new mapboxgl.Marker({
+                color: '#D2121C',
+            })
+            .setLngLat([6.0498717, 52.3446363])
+
+        .addTo(map);
+        // POPUP
+        const popup = new mapboxgl.Popup({
+                closeOnClick: !1,
+                closeButton: !1
+            })
+            .setLngLat([6.0498717, 52.3451003])
+            .setHTML('<div class="map-popup"><div class="location-mark"><img src="assets/img/icon/location-2.svg" alt=""></div><div class="location-info"><span class="area-name">Riezebosweg 4</span> 8171 MG Vaassen,<br> The Netherlands</div> </div>')
+
+        .addTo(map);
+    </script>
+
+
+
 
 </body>
 
