--- a/financiering.html
+++ b/financiering.html
@@ -154,159 +154,80 @@
             </div>
         </div>
         <!-- PAGE ROUTE END -->
-
-        <!-- ABOUT US PAGE  -->
-        <div class="about-area cpt-5">
-            <div class="container">
-                <div class="about-content-area cpy-6">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="about-content-wrapper">
-                                <div class="about-content">
-                                    <h5 class="s-title">hsv auto’s vaassen</h5>
-                                    <h2>Lorem Ipsum is simply dummy text of the</h2>
-                                    <p>Binnen een half uur rijden vanaf Apeldoorn, Zwolle en Deventer vindt u ons midden in het pittoreske dorpje Oene. De koffie staat altijd klaar! En wilt u een vrijblijvend advies? Wij helpen u graag! </p>
-                                    <p>Wij bezorgen gratis binnen een straal van 30 km rondom Oene. Daarbuiten is bezorging mogelijk tegen betaling. Wij leveren uitsluitend tegen contante betaling bij aflevering (mobiel pinnen is ook mogelijk).</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="about-img">
-                                <img src="assets/img/banner/5.png" alt="">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-        <!-- ABOUT US PAGE END  -->
-        <!-- SIGNATURE AREA  -->
-        <div class="signature-area mt-0 cpy-8">
+        <!-- PAGE CONTENT -->
+        <div class="purchase-des cpy-5">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6 mb-4">
-                        <div class="signature- area-img">
-                            <img src="assets/img/banner/6.png" alt="">
-                        </div>
-                    </div>
-                    <div class="col-md-6 mb-4">
-                        <div class="signature-content">
-                            <div class="dealer-info bg-white">
-                                <div class="info-inner">
-                                    <p class="sm-title">
-                                        hsv auto’s
-                                    </p>
-                                    <h2 class="dealer-title">
-                                        uw occossiondealer uit vaassen
-                                    </h2>
-                                    <p>Lorem Ipsum is slechts een proeftekst uit het drukkerij- en zetterijwezen. Lorem Ipsum is de standaard proeftekst in deze bedrijfstak sinds de 16e eeuw, toen een onbekende drukker een zethaak met letters nam en ze door
-                                        elkaar husselde om een font-catalogus te maken. Het heeft niet alleen vijf eeuwen overleefd maar is ook, vrijwel onveranderd</p>
+                    <div class="page-content">
+                        <h2 class="page-title">
+                            Lorem Ipsum is simply dummy text of the
+                        </h2>
+                        <p>Binnen een half uur rijden vanaf Apeldoorn, Zwolle en Deventer vindt u ons midden in het pittoreske dorpje Oene. De koffie staat altijd klaar! En wilt u een vrijblijvend advies? Wij helpen u graag!Wij bezorgen gratis binnen een
+                            straal van 30 km rondom Oene. Daarbuiten is bezorging mogelijk tegen betaling. Wij leveren uitsluitend tegen contante betaling bij aflevering (mobiel pinnen is ook mogelijk).</p>
 
-                                    <div class="signature-area">
-                                        <img src="assets/img/banner/signature.png" alt="">
-                                        <p class="dealer-name">HSV Auto’s B.V.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- PAGE CONTENT END  -->
+        <!-- PURCHASE SECTION -->
+        <div class="purchase-section">
+            <div class="container">
+                <div class="purchase-form">
+                    <form action="">
+
+                        <div class="user-info-form  cpy-6">
+                            <div class="form-head">
+                                <h5>
+                                    Financiering
+                                </h5>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-6 mb-4">
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" placeholder="NAAM *">
+                                    </div>
+                                </div>
+                                <div class="col-md-6 mb-4">
+                                    <div class="form-group">
+                                        <input type="email" class="form-control" placeholder="E-MAIL *">
+                                    </div>
+                                </div>
+                                <div class="col-md-12 mb-4">
+                                    <div class="form-group">
+                                        <textarea name="" id="" cols="30" class="form-control" rows="5" placeholder="EXTRA’S EN -OF BIJZONDERHEDEN"></textarea>
+                                    </div>
+                                </div>
+                                <div class="form-submit">
+                                    <div class="col-md-4 ps-3">
+                                        <button type="submit" class="submit-btn">verstuur</button>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
+
+                    </form>
+
                 </div>
             </div>
         </div>
-        <!-- SIGNATURE AREA END -->
 
-        <!-- =====================TEAM============ -->
-        <div class="team-section cpy-8">
+        <!-- PURCHASE SECTION END -->
+
+        <!-- Pay attention -->
+        <div class="pay-attention cmy-4">
             <div class="container">
                 <div class="row">
-                    <div class="occastion-head">
-                        <div class="left-title">
-                            <h5>hsv auto’s vaassen</h5>
-                            <h2 class="occasion-title">ons team</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="team-content mt-4">
-                    <div class="row">
-                        <div class="col-md-3 mb-4">
-                            <div class="team-card">
-                                <img src="assets/img/team.png" alt="" class="member-img">
-                                <div class="team-info">
-                                    <a href="" class="name">MIchael jackson</a>
-                                    <p>CEO</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3 mb-4">
-                            <div class="team-card">
-                                <img src="assets/img/team.png" alt="" class="member-img">
-                                <div class="team-info">
-                                    <a href="" class="name">MIchael jackson</a>
-                                    <p>CEO</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3 mb-4">
-                            <div class="team-card">
-                                <img src="assets/img/team.png" alt="" class="member-img">
-                                <div class="team-info">
-                                    <a href="" class="name">MIchael jackson</a>
-                                    <p>CEO</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3 mb-4">
-                            <div class="team-card">
-                                <img src="assets/img/team.png" alt="" class="member-img">
-                                <div class="team-info">
-                                    <a href="" class="name">MIchael jackson</a>
-                                    <p>CEO</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3 mb-4">
-                            <div class="team-card">
-                                <img src="assets/img/team.png" alt="" class="member-img">
-                                <div class="team-info">
-                                    <a href="" class="name">MIchael jackson</a>
-                                    <p>CEO</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3 mb-4">
-                            <div class="team-card">
-                                <img src="assets/img/team.png" alt="" class="member-img">
-                                <div class="team-info">
-                                    <a href="" class="name">MIchael jackson</a>
-                                    <p>CEO</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3 mb-4">
-                            <div class="team-card">
-                                <img src="assets/img/team.png" alt="" class="member-img">
-                                <div class="team-info">
-                                    <a href="" class="name">MIchael jackson</a>
-                                    <p>CEO</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3 mb-4">
-                            <div class="team-card">
-                                <img src="assets/img/team.png" alt="" class="member-img">
-                                <div class="team-info">
-                                    <a href="" class="name">MIchael jackson</a>
-                                    <p>CEO</p>
-                                </div>
-                            </div>
+                    <div class="col-md-4">
+                        <div class="page-banner-text">
+                            <p>IN- EN VERKOOP VAN AUTO’S</p>
+                            <h2>Let op! Geld lenen kost geld</h2>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- =====================TEAM END============ -->
-
+        <!-- Pay attention end -->
         <!-- ==================SERVICE=================== -->
         <div class="service cpy-6">
             <!-- CONTAINER  -->
