--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                                                 <img src="assets/img/icon/star.svg" alt="" class="rating">
                                                 <img src="assets/img/icon/star.svg" alt="" class="rating">
                                                 <img src="assets/img/icon/star.svg" alt="" class="rating">
-                                                <img src="assets/img/icon/star-alt.png" alt="" class="rating">
+                                                <img src="assets/img/icon/star-alt.svg" alt="" class="rating">
                                             </li>
                                             <p>3,7</p>
                                         </ul>
@@ -76,7 +76,7 @@
 
                                     <div class="language">
                                         <div class="language-flug">
-                                            <img src="assets/img/icon/country.png" alt="">
+                                            <img src="assets/img/icon/language.svg" alt="">
                                         </div>
                                         <select>
                                             <option value="1" selected>Select language</option>
@@ -100,9 +100,6 @@
                             </div>
                             <div class="menu">
                                 <ul class="menu-ul mobile-menu">
-                                    <li>
-                                        <div class="menu-close"><i class="icofont-close"></i></div>
-                                    </li>
                                     <li><a href="index.html" class="nav-link active">Home</a></li>
                                     <li><a href="" class="nav-link">Occassions</a></li>
                                     <li><a href="" class="nav-link">Bestelauto's</a></li>
@@ -114,9 +111,25 @@
                                 </ul>
                             </div>
 
-                            <!-- menu toggler -->
-                            <div class="hamburger-menu">
-                                <i class="icofont-navigation-menu"></i>
+                            <div class="humbarger-language">
+                                <div class="mobile-language">
+                                    <div class="language">
+                                        <div class="language-flug">
+                                            <img src="assets/img/icon/country.png" alt="">
+                                        </div>
+                                        <select>
+                                            <option value="1" selected>Select language</option>
+                                            <option value="2">Another option</option>
+                                            <option value="3">A disabled option</option>
+                                            <option value="4">Potato</option>
+                                          </select>
+                                    </div>
+                                </div>
+
+                                <!-- menu toggler -->
+                                <div class="hamburger-menu">
+                                    <div class="menu-btn__burger"></div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -1150,7 +1163,7 @@
                                         </div>
                                         <div class="address-area collapse list-unstyled" id="map">
                                             <div class="footer-map">
-                                                <img src="assets/img/map.png" class="footer-map" alt="">
+                                                <div class="map" id="footerMap"></div>
                                             </div>
                                             <div class="location">
                                                 <img src="assets/img/icon/location.svg" alt="" class="address-icon">
@@ -1210,6 +1223,11 @@
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <!-- =========nice select=========== -->
     <script src="assets/js/jquery.nice-select.min.js"></script>
+    <!-- ==============map=============== -->
+    <script src='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js'></script>
+    <link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet' />
+    <!-- ==================map init========== -->
+    <script src="assets/js/map.js"></script>
     <!-- =============custom js========= -->
     <script src="assets/js/app.js"></script>
 </body>
