--- a/occasion.html
+++ b/occasion.html
@@ -1217,7 +1217,7 @@
                                         </div>
                                         <div class="address-area collapse list-unstyled" id="map">
                                             <div class="footer-map">
-                                                <img src="assets/img/map.png" class="footer-map" alt="">
+                                                <div class="map" id="footerMap"></div>
                                             </div>
                                             <div class="location">
                                                 <img src="assets/img/icon/location.svg" alt="" class="address-icon">
@@ -1276,11 +1276,14 @@
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <!-- =========nice select=========== -->
     <script src="assets/js/jquery.nice-select.min.js"></script>
+    <!-- ==============map=============== -->
+    <script src='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js'></script>
+    <link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet' />
+    <!-- ==================map init========== -->
+    <script src="assets/js/map.js"></script>
     <!-- =============custom js========= -->
     <script src="assets/js/app.js"></script>
 
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
 </body>
 
 </html>
